# rustcraft

./: ARCHITECTURE.md  DEVELOPER_GUIDE.md  README.md
.cargo/: config.toml
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  dev-build.yml
client/: Cargo.toml
client/src/: constants.rs  game.rs  main.rs
client/src/camera/: controller.rs
client/src/input/: keyboard.rs
client/src/network/: mod.rs  setup.rs  world.rs
client/src/player/: controller.rs  interactions.rs  update.rs
client/src/shaders/: mod.rs  water.rs  water_uniforms.rs
client/src/ui/: assets.rs  button.rs  list_item.rs  mod.rs  style.rs
client/src/ui/hud/: chat.rs  loading_overlay.rs  mod.rs
client/src/ui/hud/debug/: biome.rs  blocks.rs  loaded_stats.rs  mod.rs  setup.rs
client/src/ui/hud/inventory/: items.rs
client/src/ui/menus/: mod.rs  multi.rs  solo.rs
client/src/world/: celestial.rs  data.rs  fluid_sync.rs  mod.rs
client/src/world/rendering/: frustum.rs  frustum_debug.rs  materials.rs  meshing.rs  mod.rs  render.rs  render_distance.rs  voxel.rs  water.rs  water_debug.rs  water_material.rs  water_mesh.rs
data/: keybindings.ron
data/shaders/: gerstner_water.wgsl  misty_lake.wgsl  water.wgsl
docs/: BIG_SPACE_CHUNK_SYSTEM_PLAN.md  CUSTOM_SHADERS_PLAN.md  CUSTOM_TERRAIN_GENERATION_PLAN.md  FLUID_MIGRATION.md  FRUSTUM_CULLING_PLAN.md  INDEX.md  LOD_SYSTEM_PLAN.md  REFACTORING_SUGGESTIONS.md  developer-overview.md  water.md
docs/modules/: FRUSTUM_CULLING.md  NETWORK_SYSTEM.md  PLAYER_ENTITY_SYSTEMS.md  RENDERING_SYSTEM.md  WORLD_SYSTEM.md
server/: Cargo.toml
server/src/: init.rs  main.rs
server/src/mob/: behavior.rs  mod.rs
server/src/network/: cleanup.rs  dispatcher.rs
server/src/world/: background_generation.rs  broadcast_world.rs  generation.rs  load_from_file.rs  mod.rs  save.rs  simulation.rs  terrain_mutation.rs  water_boundary.rs  water_flow.rs  water_simulation.rs  water_sleep.rs
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs  sets.rs  water_physics.rs
shared/src/fluid/: config.rs  mod.rs  plugin.rs  spawning.rs
shared/src/messages/: auth.rs  player.rs
shared/src/physics/: mod.rs  movement.rs  rapier.rs  water.rs
shared/src/players/: data.rs  mod.rs  movement.rs  simulation.rs
shared/src/water/: config.rs  mod.rs  physics.rs  simd.rs
shared/src/world/: blocks.rs  data.rs  gerstner.rs  lod.rs  mobs.rs  mod.rs  utils.rs  water.rs  water_surface.rs  water_wave_scale.rs
