[package]
name = "client"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version="0.16", features=["serialize"] }
lazy_static = "1.5.0"
rand = "0.8.5"
noise = "0.9"
bevy_simple_text_input = "0.11"
bevy_renet = "2.0.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
bevy_atmosphere = "0.13"
shared = { path = "../shared" }
server = { path = "../server" }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
clap = { version = "4.5.19", features = ["derive"] }
bevy-inspector-egui = "0.31"
egui = "0.31"
bevy_image = "0.16.1"

[lints]
workspace = true
